# Topic

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_START.md  README.md  TESTING_VISION.md  requirements.txt
Server/: .env.example  .gitignore  GUARDRAILS_SUMMARY.md  HOW_TO_TEST.md  QUICK_TEST.md  TEST_GUARDRAILS.md  TEST_SUMMARY.md  comprehensive_evaluation.py  comprehensive_report.md  comprehensive_test_dataset.json  conftest.py  demo_guardrails.py  docker-compose.yml  evaluation_report.md  evaluation_script.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  requirements2.txt  skin_lesion_prediction.py  test_dataset.json
Server/docs/: GUARDRAILS.md
Server/src/: database.py  main.py  todo_manager.py
Server/src/agents/: __init__.py  medical_diagnostic_graph.py
Server/src/configs/: agent_config.py  config.py
Server/src/evaluation/: README.md  __init__.py  evaluation_report.md  evaluator.py  evaluators.py  generate_dataset.py  large_test_dataset.json  metrics.py  metrics_collector.py  runner.py
Server/src/guardrails/: README.md  __init__.py  advanced_guardrail.py  integration_example.py  intermediate_guardrail.py  simple_guardrail.py
Server/src/handlers/: appointment.py  provider.py
Server/src/knowledges/: database.py  knowledge_base.py
Server/src/middleware/: guardrail_config.py  guardrails.py
Server/src/models/: __init__.py  appointment.py  chat.py  clinic_setting.py  conversation.py  health.py  state.py
Server/src/rag/: Embedding.py  Load.py  Reranker.py  Retrieve.py  Router.py  metadata.py
Server/src/routes/: appointments.py  chat.py  todos.py
Server/tests/: __init__.py  conftest.py  test_document_retriever.py  test_guardrails.py
Server/tests/evaluation/: quick_evaluation.py  quickstart.py  rare_diseases_evaluation.py  run_evaluation.py  (+5 more)
(+218 files in other folders)
