[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.12.0",
    "black>=23.0.0",
    "fastapi>=0.104.0",
    "google-generativeai>=0.3.0",
    "grandalf>=0.8",
    "httpx>=0.25.0",
    "huggingface-hub>=0.20.0",
    "jsonschema>=4.25.0",
    "langchain==0.1.20",
    "langchain-core==0.1.52",
    "langchain-community==0.0.38",
    "langchain-google-genai==1.0.3",
    "langgraph>=0.0.20",
    "pillow>=10.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.24.0",
    "pinecone>=7.0.1",
    "langchain-pinecone>=0.1.3",
]
